--- a/Genomics/Practice.ipynb
+++ b/Genomics/Practice.ipynb
@@ -210,8 +210,7 @@
     "        name = words[0][1:]  # We don't want to have \">\" sign\n",
     "        seqs[name] = \"\"\n",
     "    else:\n",
-    "        seqs[name] = seqs[name] + line\n",
-    "    "
+    "        seqs[name] = seqs[name] + line\n"
    ]
   },
   {
